# future_behavior_states

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: behavior.rs  experiment.rs  lib.rs  new.rs  state.rs  static_state.rs
tests/: behavior_tree.rs  state_machine.rs
