[package]
name = "future_behavior_states"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-lite = { version = "2.3", default-features = false }
tracing = { version = "0.1", default-features = false, features = ["attributes", "async-await"] }

[dev-dependencies]
futures-lite = { version = "2.3" }
tracing-subscriber = "0.3"
