[package]
name = "future_behavior_states"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-lite = { version = "2.3", default-features = false, features = ["alloc"]}
tracing = { version = "0.1", default-features = false, features = ["attributes", "async-await"] }

[dev-dependencies]
async-broadcast = "0.7"
futures-lite = { version = "2.3" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
